--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,6 @@ jobs:
     - name: build the image
       run: docker build -t flask-hello-world .
     - name: run pytest
-      run: docker run -it flask-hello-world pytest test.py
+      run: docker run flask-hello-world pytest test.py
     - name: run flake8 tests
-      run: docker run -it flask-hello-world flake8
+      run: docker run flask-hello-world flake8
