--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,12 @@ on:
 
   workflow_dispatch:
 
+env:
+  DOCKER_HUB_REPO: "shivammitra/flask-hello-world"
+  CONTAINER_NAME: "flask-hello-world"
+
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,3 +24,19 @@ jobs:
       run: docker run flask-hello-world pytest test.py
     - name: run flake8 tests
       run: docker run flask-hello-world flake8
+  
+  push-docker-image:
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: ${{ env.DOCKER_HUB_REPO }}
+
