--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ env:
   HEROKU_APP_NAME: "ci-cd-flask-hello-world"
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
